compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__tuples__case.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/tuples.rs
assertion_line: 122
expression: "\npub fn go(a) {\n  case a {\n    #(2, a) -> a\n    #(1, 1) -> 1\n    #(a, b) -> a + b\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(a) {
  case a {
    #(2, a) -> a
    #(1, 1) -> 1
    #(a, b) -> a + b
  }
}


----- COMPILED JAVASCRIPT
export function go(a) {
  let $ = a[0];
  if ($ === 2) {
    let a$1 = a[1];
    return a$1;
  } else if ($ === 1) {
    let $1 = a[1];
    if ($1 === 1) {
      return 1;
    } else {
      let a$1 = $;
      let b = $1;
      return a$1 + b;
    }
  } else {
    let a$1 = $;
    let b = a[1];
    return a$1 + b;
  }
}
