compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__tuples__constant_tuples.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/tuples.rs
assertion_line: 85
expression: "\npub const a = \"Hello\"\npub const b = 1\npub const c = 2.0\npub const e = #(\"bob\", \"dug\")\n        "
snapshot_kind: text
---
----- SOURCE CODE

pub const a = "Hello"
pub const b = 1
pub const c = 2.0
pub const e = #("bob", "dug")
        

----- COMPILED JAVASCRIPT
export const a = "Hello";

export const b = 1;

export const c = 2.0;

export const e = ["bob", "dug"];
