compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__tuples__nested_pattern.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/tuples.rs
assertion_line: 137
expression: "\npub fn go(x) {\n  case x {\n    #(2, #(a, b)) -> a + b\n    _ -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    #(2, #(a, b)) -> a + b
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  let $ = x[0];
  if ($ === 2) {
    let a = x[1][0];
    let b = x[1][1];
    return a + b;
  } else {
    return 1;
  }
}
