compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__tuples__tuple_access.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/tuples.rs
assertion_line: 42
expression: "\npub fn go() {\n  #(1, 2).0\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  #(1, 2).0
}


----- COMPILED JAVASCRIPT
export function go() {
  return [1, 2][0];
}
