compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__tuples__tuple_formatting_typescript.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/tuples.rs
assertion_line: 109
expression: "\npub const e = #(\n  \"a\", \"a\", \"a\", \"a\", \"a\", \"a\", \"a\",\n  \"a\", \"a\", \"a\", \"a\", \"a\", \"a\", \"a\",\n  \"a\", \"a\", \"a\", \"a\", \"a\", \"a\", \"a\",\n)\n"
snapshot_kind: text
---
----- SOURCE CODE

pub const e = #(
  "a", "a", "a", "a", "a", "a", "a",
  "a", "a", "a", "a", "a", "a", "a",
  "a", "a", "a", "a", "a", "a", "a",
)


----- TYPESCRIPT DEFINITIONS
export const e: [
  string,
  string,
  string,
  string,
  string,
  string,
  string,
  string,
  string,
  string,
  string,
  string,
  string,
  string,
  string,
  string,
  string,
  string,
  string,
  string,
  string
];
