compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__tuples__tuple_with_block_element.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/tuples.rs
assertion_line: 53
expression: "\npub fn go() {\n  #(\n    \"1\",\n    {\n      \"2\"\n      \"3\"\n    },\n  )\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  #(
    "1",
    {
      "2"
      "3"
    },
  )
}


----- COMPILED JAVASCRIPT
export function go() {
  return [
    "1",
    (() => {
      "2";
      return "3";
    })(),
  ];
}
